# harttraveller.github.io

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  todo.md
.github/: README.md
archive/: 2020.html  2022.html  2023.html  2024.html  2025.html  2026.html
assets/: theme.css
category/: epidemiology.html  information-theory.html  language-model.html  meaning.html  opinion.html  philosophy.html  physics.html  poetry.html  project.html  python.html  random.html  science-fiction.html
contact/: index.html
core/: theme.max.css  theme.min.css
docs/: contact.md  index.md  resume.md  tags.md
evaluating-generative-poetry/: index.html
graph/: index.md
main/: index.md  tags.md
notes/: sunkcosts clips.md
pages/: .nav.yml  alpha-bubbles.html  are-llms-chinese-rooms.html  chessan.html  defining-freedom.html  disturbing-implication-of-fixed-point-theorem.html  do-reasoning-models-reason.html  enki.html  escaping-the-heat-death-of-the-universe.html  firefox-config.html  golden-dome-good.html  improving-llm-performance-with-time-travel.html  index.md  inferring-war-casualties-from-chess-data.html  intelligence-within-reason.html  is-conflict-adaptive.html  is-consciousness-computation.html  locality-separation-and-dry.html  machinic.html  maximizing-honesty-with-game-theory.html  mnemosyne.html  natsec-lm.html  outbreak-simulation.html  resume.md  resume.mm.md  sysml-v2-is-dead-response.html  test.html  test.md  the-grid.html  the-impact-of-sea-level-rise-on-miami.html  the-state-of-ai-in-2026.html  what-is-reasoning.html  writing-a-lambda-interpreter-in-python.html
python-simple-secrets-manager/: index.html
resume/: index.html
resume.mm/: index.html
scripts/: borsuk_ulam.py  outbreak_simulation.py
search/: search_index.js  search_index.json
(+268 files in other folders)
