[tool.poetry]
name = "pages"
version = "0.1.0"
description = "Personal website."
readme = "README.md"
repository = "https://github.com/harttraveller.github.io"
authors = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]
maintainers = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders.git", branch = "master" }
mkdocs-glightbox = "^0.3.4"
mkdocs-obsidian-bridge = "^1.0.1"
mkdocs-rss-plugin = "^1.8.0"
mkdocs-jupyter = "^0.24.6"
mkdocs-git-revision-date-localized-plugin = "^1.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
