[project]
name = "publish"
version = "0.1.0"
description = ""
readme = "./github/README.md"
requires-python = ">=3.11,<=3.14"
dependencies = [
    "markdown-exec>=1.11.0",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocs-rss-plugin>=1.17.3",
]

[dependency-groups]
dev = [
    "mkdocs-roamlinks-plugin>=0.3.2",
    "mkdocstrings-python>=1.16.12",
]
