[project]
name = "publish"
version = "0.1.0"
description = ""
readme = "./github/README.md"
requires-python = ">=3.11,<=3.14"
dependencies = [
    "markdown-exec>=1.11.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-roamlinks-plugin>=0.3.2",
]

[dependency-groups]
dev = [
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-rss-plugin>=1.17.3",
    "mkdocs-plotly-plugin>=0.1.3",
    "lark>=1.2.2",
    "matplotlib>=3.10.3",
    "mkdocstrings-python>=1.16.12",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
]
